refactored Campaign GET
